app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  namespace: todo
spec:
  selector:
    app: todo-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
  # 👉 যদি Ingress না থাকে/লোকাল টেস্ট দরকার হয়:
  # type: NodePort
  # ports:
  #   - name: http
  #     port: 8080
  #     targetPort: 8080
  #     nodePort: 30080
