mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: todo
spec:
  selector:
    app: mongo
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  type: ClusterIP
